<resources>
    <string name="app_name">Messenger</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="email">Email</string>
    <string name="register">Register</string>
    <string name="already_have_an_account">Already have an account?</string>
    <string name="login">LOGIN</string>
    <string name="new_user">New User?</string>
    <string name="select_photo">Select Photo</string>
    <string name="enter_message">Enter Message</string>

</resources>